--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>WIP TITLE</title>
+    <title>Peer-2-Pocket Monsters</title>
 
     <!-- Load CSS Files -->
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/reset.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
 </head>
+
 <body>
+
+    <div id="poke-container">
+
+        <div id="chat-column" class="columns">
+            Test
+        </div>
+
+        <div id="battle-column" class="columns">
+            <div id="battle-controller">
+                Tempo
+            </div>
+        </div>
+
+        <div id="stats-column" class="columns">
+            Test
+        </div>
+
+    </div>
 
     <!-- Load JS files after DOM elements -->
     <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
     <script src="connect.js"></script>
 </body>
+
 </html>
