Created Layout for Chat Column
Created basic layout for chat column. No styles applied yet, purely structural.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,50 @@
     <div id="poke-container">
 
         <div id="chat-column" class="columns">
-            Test
+            <div class="chat-row-item">
+                <h1>Room ID:</h1>
+                <h1>##########</h1>
+            </div>
+            <div id="chat-messages" class="chat-row-item">
+                Messages
+            </div>
+            <div id="chat-send-message" class="chat-row-item">
+                <input id="chat-send-message-text" type="text">
+                <button id="chat-send-message-button">Send</button>
+            </div>
         </div>
 
         <div id="battle-column" class="columns">
             <div id="battle-controller">
-                Tempo
+                <div>
+                    Battle Scene
+                </div>
+                <div>
+                    <div>
+                        <button>
+                            Move 1
+                        </button>
+                        <button>
+                            Move 2
+                        </button>
+                        <button>
+                            Move 3
+                        </button>
+                        <button>
+                            Move 4
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
 
         <div id="stats-column" class="columns">
-            Test
+            <div>
+                Opponent Stats
+            </div>
+            <div>
+                Your Stats
+            </div>
         </div>
 
     </div>
