Created Layout for Battle and Stats Columns
Used CSS Grid to create modular layouts for both the Battle and Stats columns

--- a/index.html
+++ b/index.html
@@ -34,24 +34,22 @@
 
         <div id="battle-column" class="columns">
             <div id="battle-controller">
-                <div>
+                <div id="battle-scence">
                     Battle Scene
                 </div>
-                <div>
-                    <div>
-                        <button>
-                            Move 1
-                        </button>
-                        <button>
-                            Move 2
-                        </button>
-                        <button>
-                            Move 3
-                        </button>
-                        <button>
-                            Move 4
-                        </button>
-                    </div>
+                <div id="battle-controller-button-wrapper">
+                    <button class="battle-controller-button">
+                        Move 1
+                    </button>
+                    <button class="battle-controller-button">
+                        Move 2
+                    </button>
+                    <button class="battle-controller-button">
+                        Move 3
+                    </button>
+                    <button class="battle-controller-button">
+                        Move 4
+                    </button>
                 </div>
             </div>
         </div>
