Created Stats Table Layout
Created a table for displaying the core 6 stats for the pocket monsters. Flexes from a standing column to a long row

--- a/index.html
+++ b/index.html
@@ -56,10 +56,50 @@
 
         <div id="stats-column" class="columns">
             <div>
-                Opponent Stats
+                <h1>Opponents Stats</h1>
+                <div class="stats-table">
+                    <div class="stats-row">
+                        <h4>HP</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>AT</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>DF</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>AC</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>EV</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>SP</h4> <h4>###</h4>
+                    </div>
+                </div>
             </div>
             <div>
-                Your Stats
+                <h1>Your Stats</h1>
+                <div class="stats-table">
+                    <div class="stats-row">
+                        <h4>HP</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>AT</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>DF</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>AC</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>EV</h4> <h4>###</h4>
+                    </div>
+                    <div class="stats-row">
+                        <h4>SP</h4> <h4>###</h4>
+                    </div>
+                </div>
             </div>
         </div>
 
