--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div id="stats-column" class="columns">
-            <div>
+            <div class="stats-block">
                 <h1>Opponents Stats</h1>
                 <div class="stats-table">
                     <div class="stats-row">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div>
+            <div class="stats-block">
                 <h1>Your Stats</h1>
                 <div class="stats-table">
                     <div class="stats-row">
