Created Styles for Chat Input and Send Button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Messages
             </div>
             <div id="chat-send-message" class="chat-row-item">
-                <input id="chat-send-message-text" type="text">
+                <input id="chat-send-message-input" type="text">
                 <button id="chat-send-message-button">Send</button>
             </div>
         </div>
