Updated Chat Placeholder Text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>##########</h1>
             </div>
             <div id="chat-messages" class="chat-row-item">
-                Messages
+                13:21 - (P1): Messages
             </div>
             <div id="chat-send-message" class="chat-row-item">
                 <input id="chat-send-message-input" type="text">
@@ -66,19 +66,19 @@
                     </div>
                 </div>
                 <div id="battle-controller-button-wrapper">
-                        <button class="battle-controller-button">
-                            Move 1
-                        </button>
-                        <button class="battle-controller-button">
-                            Move 2
-                        </button>
-                        <button class="battle-controller-button">
-                            Move 3
-                        </button>
-                        <button class="battle-controller-button">
-                            Move 4
-                        </button>
-                    </div>
+                    <button class="battle-controller-button">
+                        Move 1
+                    </button>
+                    <button class="battle-controller-button">
+                        Move 2
+                    </button>
+                    <button class="battle-controller-button">
+                        Move 3
+                    </button>
+                    <button class="battle-controller-button">
+                        Move 4
+                    </button>
+                </div>
             </div>
         </div>
         <div id="stats-column" class="columns">
