Added Temp Classes to Stat Headings

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <div id="stats-column" class="columns">
             <div class="stats-block">
-                <h1>Opponents Stats</h1>
+                <h1 class="stats-heading">Opponents Stats</h1>
                 <div class="stats-table">
                     <div class="stats-row">
                         <h4>HP</h4>
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="stats-block">
-                <h1>Your Stats</h1>
+                <h1 class="stats-heading">Your Stats</h1>
                 <div class="stats-table">
                     <div class="stats-row">
                         <h4>HP</h4>
