Began Creating Health Bars

--- a/index.html
+++ b/index.html
@@ -37,8 +37,14 @@
                 <div id="battle-scence">
                     <div id="battle-scence-wrapper">
                         <div class="battle-scence-column battle-scence-column-players">
-                            <div class="battle-health-bar">
-                                Health Bar
+                            <div class="battle-health-bar-wrapper">
+                                <h3>Health Bar</h3>
+                                <div class="battle-health-bounding-box">
+                                    <!-- Currently unused -->
+                                    <!-- <div class="health-bar-red"></div>
+                                    <div class="health-bar-blue"></div> -->
+                                    <div class="battle-health-bar"></div>
+                                </div>
                             </div>
                             <div class="battle-monster">
                                 <div class="battle-monster-wrapper">
@@ -79,8 +85,8 @@
                                         alt="">
                                 </div>
                             </div>
-                            <div class="battle-health-bar">
-                                Health Bar
+                            <div class="battle-health-bar-wrapper">
+                                <h3>Health Bar</h3>
                             </div>
                         </div>
                     </div>
@@ -104,7 +110,7 @@
 
         <div id="stats-column" class="columns">
             <div class="stats-block">
-                <h1 class="stats-heading">Opponents Stats</h1>
+                <h2 class="stats-heading">Opponents Stats</h2>
                 <div class="stats-table">
                     <div class="stats-row">
                         <h4>HP</h4>
@@ -133,7 +139,7 @@
                 </div>
             </div>
             <div class="stats-block">
-                <h1 class="stats-heading">Your Stats</h1>
+                <h2 class="stats-heading">Your Stats</h2>
                 <div class="stats-table">
                     <div class="stats-row">
                         <h4>HP</h4>
