Added Roundness to HP Bars

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>##########</h1>
             </div>
             <div id="chat-messages" class="chat-row-item">
-                13:21 - (P1): Messages
+                13:21 (P1): Messages <br>
             </div>
             <div id="chat-send-message" class="chat-row-item">
                 <input id="chat-send-message-input" type="text">
@@ -45,6 +45,7 @@
                                     <div class="health-bar-blue"></div> -->
                                     <div class="battle-health-bar"></div>
                                 </div>
+                                100/100
                             </div>
                             <div class="battle-monster">
                                 <div class="battle-monster-wrapper">
@@ -87,6 +88,13 @@
                             </div>
                             <div class="battle-health-bar-wrapper">
                                 <h3>Health Bar</h3>
+                                <div class="battle-health-bounding-box">
+                                    <!-- Currently unused -->
+                                    <!-- <div class="health-bar-red"></div>
+                                    <div class="health-bar-blue"></div> -->
+                                    <div class="battle-health-bar"></div>
+                                </div>
+                                100/100
                             </div>
                         </div>
                     </div>
