Created Transparent Effect for Stats Tables

--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
                     <div id="battle-scence-wrapper">
                         <div class="battle-scence-column battle-scence-column-players">
                             <div class="battle-health-bar-wrapper">
-                                <h3>Health Bar</h3>
-                                <div class="battle-health-bounding-box">
-                                    <!-- Currently unused -->
-                                    <!-- <div class="health-bar-red"></div>
-                                    <div class="health-bar-blue"></div> -->
-                                    <div class="battle-health-bar"></div>
+                                <div class="battle-health-bar-beam">
+                                    <h3>Health Bar</h3>
+                                    <div class="battle-health-bounding-box">
+                                        <!-- Currently unused -->
+                                        <!-- <div class="health-bar-red"></div>
+                                        <div class="health-bar-blue"></div> -->
+                                        <div class="battle-health-bar"></div>
+                                    </div>
+                                    100/100
                                 </div>
-                                100/100
                             </div>
                             <div class="battle-monster">
                                 <div class="battle-monster-wrapper">
@@ -89,9 +91,6 @@
                             <div class="battle-health-bar-wrapper">
                                 <h3>Health Bar</h3>
                                 <div class="battle-health-bounding-box">
-                                    <!-- Currently unused -->
-                                    <!-- <div class="health-bar-red"></div>
-                                    <div class="health-bar-blue"></div> -->
                                     <div class="battle-health-bar"></div>
                                 </div>
                                 100/100
