--- a/index.html
+++ b/index.html
@@ -59,24 +59,34 @@
                         </div>
                         <div class="battle-scence-column">
                             <div id="pokeball-turn-indicator">
-                                <svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg"
-                                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 864 864"
-                                    enable-background="new 0 0 864 864" xml:space="preserve">
-                                    <circle fill-rule="evenodd" clip-rule="evenodd" cx="447.178" cy="447.639"
-                                        r="348.003" />
-                                    <g>
-                                        <path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M573.713,473.543c-11.995,58.904-64.089,103.231-126.535,103.231
-                                        c-62.447,0-114.54-44.327-126.535-103.231H141.169c13.155,157.485,145.125,281.202,306.008,281.202
-                                        c160.884,0,292.855-123.717,306.011-281.202H573.713z" />
-                                        <path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF"
-                                            d="M447.178,357.277c-49.904,0-90.36,40.456-90.36,90.362
-                                        c0,49.904,40.456,90.361,90.36,90.361c49.906,0,90.361-40.457,90.361-90.361C537.539,397.733,497.084,357.277,447.178,357.277z
-                                            M447.179,492.218c-24.621,0-44.579-19.958-44.579-44.578c0-24.621,19.958-44.579,44.579-44.579
-                                        c24.62,0,44.578,19.958,44.578,44.579C491.757,472.26,471.799,492.218,447.179,492.218z" />
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 700" x="0px" y="0px">
+                                    <style>
+                                        tspan {
+                                            white-space: pre
+                                        }
+
+                                        .shp0 {
+                                            fill: #000000
+                                        }
+
+                                        .shp1 {
+                                            fill: #ffffff
+                                        }
+
+                                        .shp2 {
+                                            fill: #ed1c24
+                                        }
+                                    </style>
+                                    <path id="Layer" class="shp0"
+                                        d="M350.18 699.64C156.63 699.64 0.18 543.19 0.18 349.64C0.18 156.09 156.63 -0.37 350.18 -0.37C543.73 -0.37 700.18 156.09 700.18 349.64C700.18 543.19 543.73 699.64 350.18 699.64Z" />
+                                    <g id="Layer">
+                                        <path id="Layer" fill-rule="evenodd" class="shp1"
+                                            d="M477.44 375.69C465.38 434.93 412.98 479.51 350.18 479.51C287.37 479.51 234.98 434.93 222.92 375.69L42.41 375.69C55.64 534.08 188.37 658.51 350.18 658.51C511.99 658.51 644.72 534.08 657.95 375.69L477.44 375.69Z" />
+                                        <path id="Layer" fill-rule="evenodd" class="shp1"
+                                            d="M441.06 349.64C441.06 399.83 400.37 440.52 350.18 440.52C299.99 440.52 259.3 399.83 259.3 349.64C259.3 299.44 299.99 258.76 350.18 258.76C400.37 258.76 441.06 299.44 441.06 349.64ZM395.01 349.64C395.01 324.88 374.94 304.8 350.18 304.8C325.42 304.8 305.34 324.88 305.34 349.64C305.34 374.4 325.42 394.47 350.18 394.47C374.94 394.47 395.01 374.4 395.01 349.64Z" />
                                     </g>
-                                    <path fill-rule="evenodd" clip-rule="evenodd" fill="#ED1C24" d="M447.178,318.504c62.446,0,114.54,44.327,126.535,103.232h179.475
-                                    c-13.155-157.485-145.127-281.203-306.011-281.203c-160.882,0-292.852,123.718-306.008,281.203h179.474
-                                    C332.638,362.831,384.73,318.504,447.178,318.504z" />
+                                    <path id="Layer" fill-rule="evenodd" class="shp2"
+                                        d="M350.18 219.76C412.98 219.76 465.38 264.34 477.44 323.59L657.95 323.59C644.72 165.19 511.99 40.77 350.18 40.77C188.37 40.77 55.64 165.19 42.41 323.59L222.92 323.59C234.98 264.34 287.37 219.76 350.18 219.76Z" />
                                 </svg>
                             </div>
                         </div>
