--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
         <div id="chat-column" class="columns">
             <div class="chat-row-item">
-                <h1>Room ID:</h1>
-                <h1>##########</h1>
+                <div id="room-info">
+                    <h1 id="room-id-label">Room ID:</h1>
+                    <h1 id="room-id-key">##########</h1>
+                </div>
             </div>
             <div id="chat-messages" class="chat-row-item">
                 13:21 (P1): Messages <br>
