Began Creating ID Menu

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
 <body>
 
+    <!-- ID Menu -->
+    <div id="id-menu-side">
+        <svg id="pulltab-side" height="40" width="30">
+            <polygon id="pulltab-triangle-side" points="0,0 30,20 0,40" />
+            Sorry, your browser does not support inline SVG.
+        </svg>
+    </div>
+
     <div id="poke-container">
 
         <div id="chat-column" class="columns">
