--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- ID Menu -->
     <div id="id-menu-side">
         <svg id="pulltab-side" height="40" width="30">
-            <polygon id="pulltab-triangle-side" points="0,0 30,20 0,40" />
+            <polygon id="pulltab-triangle-side" class="pulltab-triangle" points="0,0 30,20 0,40" />
             Sorry, your browser does not support inline SVG.
         </svg>
     </div>
