Created basic connections in Protobattle folder

--- a/protobattle/index.html
+++ b/protobattle/index.html
@@ -11,11 +11,11 @@
     <h1 id="receiver-id">########</h1>
 
     Connect to Peer:
-    <input type="text">
+    <input type="text" id="receiver-id-input">
+    <button id="connect-button">Connect</button>
 
-    <div id="status">Connected!</div>
+    <div id="stat"></div>
 
-    <br>
     <br>
     <br>
 
