--- a/protobattle/index.html
+++ b/protobattle/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     Peer ID:
     <h1 id="receiver-id">########</h1>
@@ -17,24 +19,34 @@
     <div id="stat"></div>
 
     <br>
+
+    Messages:
+    <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
+    <button type="button" id="sendButton">Send</button>
+    <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
+
+    <div class="message" id="message"></div>
+
+    <br>
     <br>
 
-    <button>Hit for 10</button>
-    <button>Heal for 10</button>
+    <button id="hit">Hit for 10</button>
+    <button id="heal">Heal for 10</button>
 
 
 
     <h2>Player Stats:</h2>
-    <h3>HP ##</h3>
-    <h3>AT 50</h3>
-    <h3>DF 50</h3>
+    <h3 id="playerHP">HP ##</h3>
+    <h3 id="playerAT">AT 50</h3>
+    <h3 id="playerDF">DF 50</h3>
 
     <h2>Opponent Stats:</h2>
-    <h3>HP ##</h3>
-    <h3>AT 50</h3>
-    <h3>DF 50</h3>
+    <h3 id="opponentHP">HP ##</h3>
+    <h3 id="opponentAT">AT 50</h3>
+    <h3 id="opponentDF">DF 50</h3>
 
     <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
     <script src="protobattle.js"></script>
 </body>
+
 </html>
