connect.js file update

--- a/protobattle/index.html
+++ b/protobattle/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    Peer ID:
     <h1 id="receiver-id">########</h1>
 
     Connect to Peer:
@@ -18,6 +17,7 @@
 
     <div id="stat"></div>
 
+    <br>
     <br>
 
     Messages:
@@ -33,14 +33,15 @@
     <button id="hit">Hit for 10</button>
     <button id="heal">Heal for 10</button>
 
+    <br>
+    <br>
 
-
-    <h2>Player Stats:</h2>
+    Player Stats:
     <h3 id="playerHP">HP ##</h3>
     <h3 id="playerAT">AT 50</h3>
     <h3 id="playerDF">DF 50</h3>
 
-    <h2>Opponent Stats:</h2>
+    Opponent Stats:
     <h3 id="opponentHP">HP ##</h3>
     <h3 id="opponentAT">AT 50</h3>
     <h3 id="opponentDF">DF 50</h3>
