Updated ID's for login

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <div id="login-menu">
         <div id="login-menu-modal">
             CLICK OFF THE MODAL TO DISMISS IT
-
+            <br>
+            <br>
+            <br>
+            <h1 id="room-id-key">ID:</h1>
+            <input type="text" name="" id="receiver-id-input">
             <button id="login-menu-submit">Battle!</button>
         </div>
     </div>
@@ -32,7 +36,7 @@
             <div class="chat-row-item">
                 <div id="room-info">
                     <h1 id="room-id-label">Room ID:</h1>
-                    <h1 id="room-id-key">##########</h1>
+                    <h1 id="room-id-key-ingame">##########</h1>
                 </div>
             </div>
             <div id="chat-messages" class="chat-row-item">
