Fixed connectivity for main page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <br>
             <br>
             <br>
-            <h1 id="room-id-key">ID:</h1>
+            <!-- <h1 id="room-key-id">ID:</h1> -->
+            <h2 id="room-key">ID:</h2>
             <input type="text" name="" id="receiver-id-input">
             <button id="login-menu-submit">Battle!</button>
         </div>
@@ -125,16 +126,16 @@
                     </div>
                 </div>
                 <div id="battle-controller-button-wrapper">
-                    <button class="battle-controller-button">
+                    <button id="battle-move-0" class="battle-controller-button">
                         Move 0
                     </button>
-                    <button class="battle-controller-button">
+                    <button id="battle-move-1" class="battle-controller-button">
                         Move 1
                     </button>
-                    <button class="battle-controller-button">
+                    <button id="battle-move-2" class="battle-controller-button">
                         Move 2
                     </button>
-                    <button class="battle-controller-button">
+                    <button id="battle-move-3" class="battle-controller-button">
                         Move 3
                     </button>
                 </div>
