Testing Battle button 2

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             <br>
             <br>
             <br>
-            <!-- <h1 id="room-key-id">ID:</h1> -->
-            <h2 id="room-key">ID:</h2>
+            <h1>ID: <span id="room-key"></span></h1>
             <input type="text" name="" id="receiver-id-input">
             <button id="login-menu-submit">Battle!</button>
         </div>
