--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <br>
             <h1>ID: <span id="room-key"></span></h1>
             <input type="text" name="" id="receiver-id-input">
+            <div id="stat"></div>
             <button id="login-menu-submit">Battle!</button>
         </div>
     </div>
