put wrong room id last commit...

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="chat-column" class="columns">
             <div class="chat-row-item">
                 <div id="room-info">
-                    <h1>Room ID: <span id= "room-id-label"></span></h1>
+                    <h1 id="room-id-label">Room ID:</h1>
                     <h1 id="room-id-key-ingame">##########</h1>
                 </div>
             </div>
