Fixed login modal fade

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div id="chat-messages" class="chat-row-item">
-                13:21 (P1): Messages <br>
+                <!-- Where text appears during chatting -->
             </div>
             <div id="chat-send-message" class="chat-row-item">
                 <input id="chat-send-message-input" type="text">
