--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <br>
             <h1>ID: <span id="room-key"></span></h1>
             <input type="text" name="" id="receiver-id-input">
+            <select name="" id="login-monster-choice">
+
+            </select>
             <div id="stat"></div>
             <button id="login-menu-submit">Battle!</button>
         </div>
