Monster stats now correctly populate

--- a/index.html
+++ b/index.html
@@ -148,27 +148,27 @@
                 <div class="stats-table">
                     <div class="stats-row">
                         <h4>HP</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-opponent" id="stats-HP-value-opponent">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>AT</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-opponent" id="stats-AT-value-opponent">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>DF</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-opponent" id="stats-DF-value-opponent">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>AC</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-opponent" id="stats-AC-value-opponent">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>EV</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-opponent" id="stats-EV-value-opponent">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>SP</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-opponent" id="stats-SP-value-opponent">###</h4>
                     </div>
                 </div>
             </div>
@@ -177,27 +177,27 @@
                 <div class="stats-table">
                     <div class="stats-row">
                         <h4>HP</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-player" id="stats-HP-value-player">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>AT</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-player" id="stats-AT-value-player">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>DF</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-player" id="stats-DF-value-player">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>AC</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-player" id="stats-AC-value-player">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>EV</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-player" id="stats-EV-value-player">###</h4>
                     </div>
                     <div class="stats-row">
                         <h4>SP</h4>
-                        <h4>###</h4>
+                        <h4 class="stats-value-player" id="stats-SP-value-player">###</h4>
                     </div>
                 </div>
             </div>
