--- a/protobattle/index.html
+++ b/protobattle/index.html
@@ -12,7 +12,7 @@
     <h1 id="receiver-id">########</h1>
 
     Connect to Peer:
-    <input type="text" id="receiver-id-input">
+    <input type="text" id="receiver-id-input" autocomplete = "off">
     <button id="connect-button">Connect</button>
 
     <div id="stat"></div>
@@ -37,14 +37,14 @@
     <br>
 
     Player Stats:
-    <h3 id="playerHP">HP ##</h3>
-    <h3 id="playerAT">AT 50</h3>
-    <h3 id="playerDF">DF 50</h3>
+    <h3>HP <span id="playerHP">100</span></h3>
+    <h3>AT <span id="playerAT">50</span></h3>
+    <h3>DF <spac id="playerDF">50</span></h3>
 
     Opponent Stats:
-    <h3 id="opponentHP">HP ##</h3>
-    <h3 id="opponentAT">AT 50</h3>
-    <h3 id="opponentDF">DF 50</h3>
+    <h3>HP <span id="opponentHP">100</span></h3>
+    <h3>AT <span id="opponentAT">50</span></h3>
+    <h3>DF <span id="opponentDF">50</span></h3>
 
     <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
     <script src="protobattle.js"></script>
