clear input text field when refresh

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <br>
             <br>
             <h1>ID: <span id="room-key"></span></h1>
-            <input type="text" name="" id="receiver-id-input">
+            <input type="text" name="" id="receiver-id-input" autocomplete = "off">
             <select name="" id="login-monster-choice">
                 <!-- Options load in from monster library -->
             </select>
