--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 -->
     <div id="login-menu">
         <div id="login-menu-modal">
-            CLICK OFF THE MODAL TO DISMISS IT
+            Enter Your Partner's Battle ID and Choose a Pocket Monster!
             <br>
             <br>
-            <h1>ID: <span id="room-key"></span></h1>
+            <h1>Your Battle ID: <span id="room-key"></span></h1>
             <input type="text" name="" id="receiver-id-input" autocomplete = "off">
             <select name="" id="login-monster-choice">
                 <!-- Options load in from monster library -->
@@ -60,7 +60,7 @@
         <div id="chat-column" class="columns">
             <div class="chat-row-item">
                 <div id="room-info">
-                    <h1 id="room-id-label">Room ID:</h1>
+                    <h1 id="room-id-label">Partner's ID:</h1>
                     <h1 id="room-id-key-ingame">##########</h1>
                 </div>
             </div>
@@ -187,7 +187,7 @@
 -->
         <div id="stats-column" class="columns">
             <div class="stats-block">
-                <h2 class="stats-heading">Opponents Stats</h2>
+                <h2 class="stats-heading">Opponent's Stats</h2>
                 <div class="stats-table">
                     <div class="stats-row">
                         <h4>HP</h4>
