Buttons now add their titles when the match begins

--- a/index.html
+++ b/index.html
@@ -159,16 +159,16 @@
                 </div>
                 <div id="battle-controller-button-wrapper">
                     <button id="battle-move-0" class="battle-controller-button">
-                        Move 0
+                        <h5>Move 0</h5>
                     </button>
                     <button id="battle-move-1" class="battle-controller-button">
-                        Move 1
+                        <h5>Move 0</h5>
                     </button>
                     <button id="battle-move-2" class="battle-controller-button">
-                        Move 2
+                        <h5>Move 0</h5>
                     </button>
                     <button id="battle-move-3" class="battle-controller-button">
-                        Move 3
+                        <h5>Move 0</h5>
                     </button>
                 </div>
             </div>
