Added Firebase hosting

--- a/index.html
+++ b/index.html
@@ -246,10 +246,18 @@
             </div>
         </div>
     </div>
-        <!-- Load JS files after DOM elements for performance -->
-        <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
-        <script src="connect.js" type="module"></script>
-        <script src="randombg.js"></script>
+
+    <!-- Load JS files after DOM elements for performance -->
+    <script src="https://unpkg.com/peerjs@1.0.0/dist/peerjs.min.js"></script>
+    <script src="connect.js" type="module"></script>
+    <script src="randombg.js"></script>
+
+    <!-- Firebase Files -->
+    <script src="/__/firebase/7.5.2/firebase-app.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
 </body>
 
 </html>
